--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <input type="text" id="genius-api-input" class="w-full bg-[#1a1a1a] border border-[#333] rounded-lg px-3 py-2 text-sm text-white focus:outline-none focus:border-red-500 transition" placeholder="Paste your key here...">
                 </div>
                 <div class="pt-4 border-t border-[#333]">
-                    <p class="text-xs text-gray-500 text-center">YtMusic Clone v1.6</p>
+                    <p class="text-xs text-gray-500 text-center">Lyra</p>
                 </div>
             </div>
         </div>
@@ -202,8 +202,8 @@
                     <button id="desktop-sidebar-toggle" class="hidden sm:block text-gray-400 hover:text-white mr-1">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                     </button>
-                    <img src="https://img.icons8.com/?size=100&id=YNioBT5SxQw3&format=png&color=000000" class="w-8 h-8 flex-shrink-0">
-                    <span class="text-xl font-bold tracking-tighter nav-text">Music</span>
+                    <img src="https://icons.iconarchive.com/icons/graphicloads/polygon/256/sound-2-icon.png" class="w-8 h-8 flex-shrink-0">
+                    <span class="text-xl font-bold tracking-tighter nav-text">Lyra</span>
                 </div>
                 <button id="close-sidebar-btn" class="sm:hidden text-gray-400 hover:text-white">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
@@ -255,7 +255,7 @@
         <div class="flex items-center justify-between h-full px-2 sm:px-4">
             <div class="flex items-center flex-1 min-w-0 mr-2">
                 <button id="mobile-prev-btn" class="sm:hidden text-gray-300 p-2 mr-1"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/></svg></button>
-                <img id="player-art" src="https://placehold.co/48x48/333/666?text=Music" class="w-10 h-10 sm:w-12 sm:h-12 rounded bg-gray-800 object-cover flex-shrink-0 cursor-pointer" title="Expand">
+                <img id="player-art" src="https://placehold.co/48x48/333/666?text=Lyra" class="w-10 h-10 sm:w-12 sm:h-12 rounded bg-gray-800 object-cover flex-shrink-0 cursor-pointer" title="Expand">
                 <div class="ml-3 overflow-hidden flex-1 cursor-pointer" id="player-info-area">
                     <p id="player-title" class="text-sm sm:text-base font-medium truncate text-white">Ready to play</p>
                     <p id="player-artist" class="text-xs sm:text-sm text-gray-400 truncate">Select a song</p>
@@ -959,5 +959,6 @@
     </script>
 </body>
 </html>
+
 
 
